[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://level1/atm_exchange_popup.gd" id="1_script"]

[node name="ExchangePopup" type="Panel"]
visible = true
z_index = 300
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"StyledPopup"
script = ExtResource("1_script")
mouse_filter = 0

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="TitleLabel" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
text = "Currency Exchange"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RatesLabel" type="Label" parent="MarginContainer/VBox"]
visible = false
layout_mode = 2
text = "Current Rates:
1 silver = 100 copper"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Separator1" type="HSeparator" parent="MarginContainer/VBox"]
visible = false
layout_mode = 2

[node name="CurrencyLabel" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
text = "Currency:"

[node name="CurrencyRow" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="CurrencyStaticLabel" type="Label" parent="MarginContainer/VBox/CurrencyRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Silver"

[node name="CurrencyOption" type="OptionButton" parent="MarginContainer/VBox/CurrencyRow"]
layout_mode = 2
size_flags_horizontal = 3
visible = false

[node name="BuySellToggle" type="Button" parent="MarginContainer/VBox/CurrencyRow"]
layout_mode = 2
text = "BUY"

[node name="AmountLabel" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
text = "Amount:"

[node name="AmountRow" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="AmountInput" type="LineEdit" parent="MarginContainer/VBox/AmountRow"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "0"

[node name="MinusButton" type="Button" parent="MarginContainer/VBox/AmountRow"]
layout_mode = 2
text = "-"

[node name="PlusButton" type="Button" parent="MarginContainer/VBox/AmountRow"]
layout_mode = 2
text = "+"

[node name="Plus10Button" type="Button" parent="MarginContainer/VBox/AmountRow"]
layout_mode = 2
text = "+10"

[node name="MaxButton" type="Button" parent="MarginContainer/VBox/AmountRow"]
layout_mode = 2
text = "Max"

[node name="PreviewLabel" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
text = "Enter amount"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Separator2" type="HSeparator" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="ButtonRow" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="ExchangeButton" type="Button" parent="MarginContainer/VBox/ButtonRow"]
layout_mode = 2
text = "Accept"
disabled = true
